# libgphoto-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  camera.cpp  camera.h  camerafile.cpp  camerafile.h  driver.cpp  driver.h  exceptions.cpp  fwd.h  gphoto_wrapper.cpp  gphoto_wrapper.h  libgphoto-cpp.kdev4  logger.h  read_image.h  read_jpeg_image.cpp  read_jpeg_image.h  read_raw_image.cpp  read_raw_image.h  serialshooter.cpp  serialshooter.h  shooter.h  widget.cpp  widget.h  widget_bool.cpp  widget_menu.cpp  widget_menu.h  widget_p.h
cmake/: FindCIMG.cmake  FindLibRaw.cmake
examples/: CMakeLists.txt  commons.h  filesystem.cpp  setmenu.cpp  shoot_preset_and_bulb.cpp
scripts/: add_header_guard
src/: CMakeLists.txt  GPhoto++.h  camera.cpp  camera.h  camera_control.cpp  camera_control.h  camera_filesystem.cpp  camera_filesystem.h  camera_settings.cpp  camera_settings.h  camerafile.cpp  camerafile.h  dptr.h  driver.cpp  driver.h  eosremotereleaseshooter.cpp  eosremotereleaseshooter.h  exceptions.cpp  exceptions.h  exposure.cpp  exposure.h  fwd.h  gphoto_wrapper.cpp  gphoto_wrapper.h  gphotowidgetshooter.h  list.cpp  list.h  logger.cpp  logger.h  serialshooter.cpp  serialshooter.h  shooter.h  utils.h  widget.cpp  widget.h  widget_bool.cpp  widget_bool.h  widget_date.cpp  widget_date.h  widget_menu.cpp  (+8 more)
src/backend/: CMakeLists.txt  exceptions.cpp  exceptions.h  gphoto_wrapper.cpp  gphoto_wrapper.h  list.cpp  list.h
src/utils/: CMakeLists.txt  containers_streams.h  dptr.h  logger.cpp  logger.h  read_image.cpp  read_image.h  read_jpeg_image.cpp  read_jpeg_image.h  read_raw_image.cpp  read_raw_image.h  utils.h
src/widgets/: CMakeLists.txt  widget.cpp  widget.h  widget_date.cpp  widget_date.h  widget_menu.cpp  widget_menu.h  widget_p.h  widget_range.cpp  widget_range.h  widget_string.cpp  widget_string.h  widget_toggle.cpp  widget_toggle.h  widgets.h
tests/: CMakeLists.txt  gphoto_cli.cpp  test_camera_settings.cpp  test_exposure_parsing.cpp  test_gphoto_widgets.cpp  test_read_image.cpp  test_version.cpp
tests/original_implementation/: gphoto_readimage.c  gphoto_readimage.h
