if(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/googletest/CMakeLists.txt")
  add_subdirectory(googletest)
  include_directories(../src)
  include(add_gtest)
  find_package(JPEG REQUIRED)
  
  add_gtest(NAME gphoto_widgets TYPE integration SOURCES test_gphoto_widgets.cpp TARGET_LINK_LIBRARIES gphoto++ gphoto2 )
  add_gtest(NAME exposure_parsing TYPE unit SOURCES test_exposure_parsing.cpp TARGET_LINK_LIBRARIES gphoto++ gphoto2 )
  add_gtest(NAME read_image TYPE integration SOURCES test_read_image.cpp TARGET_LINK_LIBRARIES gphoto++ gphoto2 raw ${JPEG_LIBRARIES})
  add_gtest(NAME version TYPE unit SOURCES test_version.cpp TARGET_LINK_LIBRARIES gphoto++ gphoto2)
  add_gtest(NAME camera_settings TYPE unit SOURCES test_camera_settings.cpp TARGET_LINK_LIBRARIES gphoto++ gphoto2)

else(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/googletest/CMakeLists.txt")
  message(WARNING "Tests are enabled but googletest submodule was not found")
endif(EXISTS "${CMAKE_CURRENT_SOURCE_DIR}/googletest/CMakeLists.txt")